--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -2,7 +2,6 @@
     position: fixed;
     top:0;
     left: 0;
-    border-bottom: 1px solid var(--color-details) ;
     background-color: var(--base-color);
     width: 100%;
 }
@@ -10,10 +9,12 @@
 .header .container{
     display: flex;
     flex-direction: row;
-    justify-content: space-between ;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.header-logo {
+.header-logo a img{
+    width: 125px;
     cursor: pointer;
 }
 
@@ -21,4 +22,12 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+}
+
+/* .header-nav ul li a{
+
+} */
+    
+.header-nav ul li a:hover{
+    color: var(--color-details);
 }
