--- a/styles/subject.css
+++ b/styles/subject.css
@@ -7,6 +7,7 @@
 .subject-card {
   min-height: 250px;
   max-width: 300px;
+  min-width: 300px;
   background-color: var(--branco);
   border-radius: 10px;
   padding: 20px;
