--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .nav-link {
     text-decoration: none;
     color: #0CAFC1;
@@ -25,5 +31,29 @@
 }
 
 .card:hover {
-    border: 2px solid #0CAFC1
+    border: 1px solid #0CAFC1;
+    opacity: 0.9;
+    transform: scale(1.01 );
+    box-shadow: rgba(85, 204, 68, 0.35) 0px 5px 15px;
+}
+
+@media (max-width: 1000px) {
+    .wrap-card {
+        margin: 1rem;
+    }
+
+    .cards {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 767px) {
+    .wrap-card {
+        margin: initial;
+    }
+
+    .cards {
+        justify-content: center;
+    }
+
 }
