--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,18 @@
     box-sizing: border-box;
 }
 
+
+
+.wrap-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 84vh;
+}
+
+.footer {
+    margin-top: auto;
+}
+
 .nav-link {
     text-decoration: none;
     color: #0CAFC1;
