--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,20 @@
     color: #55cc44;
 }
 
+nav ul li.page-item button.page-link,
+nav button.nav-link {
+    padding: 0.5rem 1rem;
+    color: #0CAFC1;
+    font-size: 1.2rem;
+    border: 1px solid #0CAFC1;
+    border-radius: 0.375rem;
+}
+nav ul li.page-item button.page-link:hover,
+nav button.nav-link:hover {
+    box-shadow: rgba(85, 204, 68, 0.35) 0px 5px 15px;
+    color: #55cc44;
+}
+
 .card-card {
     transition: .3s;
 }
