--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@
     box-sizing: border-box;
 }
 
-
 .display-num-pag,
 .nav-link {
     text-decoration: none;
@@ -27,6 +26,7 @@
     font-weight: 500;
     color: #55cc44;
 }
+hr,
 .title-section,
 .display-title-pag {
     color: #55cc44;
@@ -50,6 +50,7 @@ nav ul li.page-item button.page-link:hover,
 nav button.nav-link:hover {
     box-shadow: rgba(85, 204, 68, 0.35) 0px 5px 15px;
     color: #55cc44;
+    border-color: #55cc44;
 }
 
 .card-detail.card {
